Update the documentation